# iop-lsp

./: .gitignore  README.md  SPECS.md  install-nvim-iop-lsp.sh  pyproject.toml
iop_lsp/: __main__.py  c_mapping.py  doc_comments.py  indexer.py  server.py  symbols.py
tests/: test_c_mapping.py  test_indexer.py
